--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <section id="data-output">
           <h1>Font Settings</h1>
-          <pre><code>#headline-display {
+          <pre><code>#headline-display h1 {
             font-size: <span id="show-size">16</span>px;
             font-family: <span id="show-font">Helvetica</span>;
             font-weight: <span id="show-weight">normal</span>;
